--- a/.env.test
+++ b/.env.test
@@ -1,11 +1,11 @@
 # title
-REACT_APP_WEBSITE_NAME='Степ Роял. Выигрывай с орехами!'
+REACT_APP_WEBSITE_NAME='template'
 
 # телеграм
 # REACT_APP_LINK_TG='https://ya.ru/'
 
 # вк
-REACT_APP_LINK_VK='https://vk.com/step_slavyanka'
+# REACT_APP_LINK_VK='https://ya.ru/'
 
 # ок
 # REACT_APP_LINK_OK='https://ya.ru/'
