--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@uidotdev/usehooks": "^2.4.1",
     "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
+    "date-fns-tz": "^2.0.0",
     "env-cmd": "^10.1.0",
     "formik": "^2.4.5",
     "normalize.css": "^8.0.1",
