--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@craco/craco": "^7.1.0",
     "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -28,11 +29,11 @@
     "yup": "^1.3.2"
   },
   "scripts": {
-    "start": "env-cmd -f .env.test react-scripts start",
+    "start": "env-cmd -f .env.test craco start",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "build:test": "env-cmd -f .env.test react-scripts build",
-    "build:prod": "env-cmd -f .env.production react-scripts build",
+    "build:test": "env-cmd -f .env.test craco build",
+    "build:prod": "env-cmd -f .env.production craco build",
     "component": "generate-react component"
   },
   "eslintConfig": {
